# OpenCapBench

./: SETUP.md  pyproject.toml  setup.sh
benchmarking/: constants.py
docs/: DATA_DOWNLOAD.md  MODEL_DOWNLOAD.md
scripts/: quick_test.sh  run_evaluation.sh  test_imports.py
